Fixing landscape orientation issue on smaller devices

--- a/src/Sidebar/Sidebar.scss
+++ b/src/Sidebar/Sidebar.scss
@@ -5,7 +5,7 @@
     position: fixed;
     left: 0;
     top: 2vh;
-    z-index: 0;
+    z-index: 1;
 
     margin-right: 1rem;
     padding: 0.5rem;
@@ -18,7 +18,7 @@
 #sidebar {
     position: fixed;
     top: 2vh;
-    z-index: 1;
+    z-index: 2;
 
     padding: 0.5rem;
 
@@ -71,24 +71,25 @@
         display: none;
     }
 
+    overflow: hidden;
     display: none;
 }
 
-// #vertical-scroll {
-//     position: fixed;
-//     right: 0;
-//     top: 35vh;
+#vertical-scroll {
+    position: fixed;
+    right: 0;
+    top: 30vh;
 
-//     writing-mode: vertical-lr;
-//     padding: 5vh 0.1rem;
+    writing-mode: vertical-lr;
+    padding: 5vh 0.1rem;
 
-//     text-transform: uppercase;
+    text-transform: uppercase;
 
-//     font-size: 0.5rem;
-//     font-weight: bold;
-//     background-color: $primaryColor;
-//     color: saturate($secondaryColor, 100%)
-// }
+    font-size: 0.5rem;
+    font-weight: bold;
+    background-color: $primaryColor;
+    color: saturate($secondaryColor, 100%)
+}
 
 @media screen and (orientation: portrait) and (max-width: 1090px) {
     #sidebar {
@@ -107,5 +108,13 @@
 
     #toggle-sidebar {
         display: none;
+    }
+}
+
+@media screen and (orientation: portrait) and (max-height: 715px) {
+    #sidebar {
+        #tutorial {
+            display: none;
+        }
     }
 }
